--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.5.0",
     "firebase-admin": "^13.6.0",
     "react": "^19.2.0",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
